# playstore-freemium-churn-funnel

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.streamlit/: config.toml
config/: simulation_config.yaml
dashboard/: dashboard_build_guide.md  metrics_formulas.md
data/processed/: model_metrics.txt
reports/: business_recommendation.md  executive_presentation.md  interactive_dashboard.html  powerbi_dashboard.html
sql/: 01_schema.sql  02_clean_bot_filter.sql  03_funnel_cte.sql  04_cohort_retention_cte.sql  05_churn_analysis.sql  06_segment_breakdowns.sql  07_advanced_analytics.sql
src/: app.py  db_setup.py  fetch_playstore_apps.py  generate_html_dashboard.py  generate_markdowns.py  generate_powerbi_export.py  generate_synthetic_events.py  make_visualizations.py  run_ab_test_analysis.py  run_pipeline.py  run_predictive_model.py  utils.py
tests/: conftest.py  test_data_quality.py  test_unit.py
