[project]
name = "playstore-freemium-churn-funnel"
version = "1.0.0"
description = "End-to-end product analytics pipeline for Google Play Store freemium app churn & funnel analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Sourav Kumar Sharma"},
]
keywords = ["analytics", "duckdb", "churn-analysis", "funnel-analysis", "ab-testing", "google-play"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "duckdb>=0.8.0",
    "faker>=18.0.0",
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    "plotly>=5.11.0",
    "scipy>=1.10.0",
    "statsmodels>=0.13.5",
    "pyyaml>=6.0",
    "scikit-learn>=1.2.0",
    "streamlit>=1.20.0",
    "kaggle>=1.5.0",
    "pytest>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "isort>=5.12.0",
]

[tool.black]
line-length = 140
target-version = ["py310"]

[tool.ruff]
line-length = 140
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.isort]
profile = "black"
line_length = 140
